v6: GraalVM native image