@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.5'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id 'org.graalvm.buildtools.native' version '0.9.20'
 }
 
 group = 'com.acme'
@@ -35,4 +36,14 @@ dependencyManagement {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+graalvmNative {
+	binaries {
+		main {
+			buildArgs.add('--add-opens=java.base/java.lang=ALL-UNNAMED')
+			buildArgs.add('--add-opens=java.base/java.util=ALL-UNNAMED')
+			buildArgs.add('--add-opens=java.base/sun.net=ALL-UNNAMED')
+		}
+	}
 }
